<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:clipToPadding="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SELECT_RATING"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="left"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            android:orientation="vertical"
            >

            <RadioButton
                style="@style/VerticalRadioButtonStyle"
                android:text="@string/IMMEDIATE_ACTION"
                android:id="@+id/five"
                android:checked="true"
                />

            <RadioButton
                style="@style/VerticalRadioButtonStyle"
                android:text="@string/WORSE"
                android:id="@+id/four"
                />
            <RadioButton
                style="@style/VerticalRadioButtonStyle"
                android:text="@string/BAD"
                android:id="@+id/three"
                />

            <RadioButton
                style="@style/VerticalRadioButtonStyle"
                android:text="@string/POOR"
                android:id="@+id/two"
                />
            <RadioButton
                style="@style/VerticalRadioButtonStyle"
                android:text="@string/AVERAGE"
                android:id="@+id/one"
                />
        </RadioGroup>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/OK"
            android:layout_marginTop="20dp"
            android:id="@+id/select_rating"
            />
    </LinearLayout>
</LinearLayout>