<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NEWS"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/grievance"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:stretchColumns="0,1"
            >
        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LABEL_TITLE"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:hint="@string/TITLE"
                android:inputType="text"
                />

        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LABEL_DESCRIPTION"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:hint="@string/ENTER_DESCRIPTION"
                android:minLines="3"
                android:maxLines="5"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                />
        </TableRow>
</TableLayout>
    <Button
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/POST_NEWS"
        android:layout_marginTop="10dp"
        android:onClick="postNews"
        />
    </LinearLayout>