<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/grievance"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:clipToPadding="false"
        >

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/VIEW"
            android:onClick="viewGrievances"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/VIEW_PENDING"
            android:onClick="viewOpenGrievances"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/NEWS"
            android:onClick="postNews"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/REPORTS"
            android:onClick="viewReports"
            />

    </LinearLayout>
</LinearLayout>
</ScrollView>