<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/grievance"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WELCOME"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:clipToPadding="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SELECT_USER"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="left"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userType"
            android:padding="10dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ADMIN"
                android:id="@+id/admin"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:checked="true"
                android:buttonTint="@color/colorPrimaryDark"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CITIZEN"
                android:id="@+id/citizen"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/colorPrimaryDark"
                />
        </RadioGroup>


        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/SUBMIT"
            android:onClick="selectUser"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>
