<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/grievance"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_NAME"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VERSION"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOADING"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        />
</LinearLayout>